--- a/BB-8_Dome_Actuation/.vscode/settings.json
+++ b/BB-8_Dome_Actuation/.vscode/settings.json
@@ -27,6 +27,18 @@
 	"files.associations": {
 		"memory": "cpp",
 		"random": "cpp",
-		"optional": "cpp"
+		"optional": "cpp",
+		"new": "cpp",
+		"algorithm": "cpp",
+		"*.tcc": "cpp",
+		"fstream": "cpp",
+		"numeric": "cpp",
+		"system_error": "cpp",
+		"istream": "cpp",
+		"limits": "cpp",
+		"ostream": "cpp",
+		"stdexcept": "cpp",
+		"streambuf": "cpp",
+		"functional": "cpp"
 	}
 }
