--- a/BB-8_Dome_Actuation/.vscode/settings.json
+++ b/BB-8_Dome_Actuation/.vscode/settings.json
@@ -39,6 +39,8 @@
 		"ostream": "cpp",
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
-		"functional": "cpp"
+		"functional": "cpp",
+		"string_view": "cpp",
+		"bit": "cpp"
 	}
 }
