Roll and Tilt via bluetooth (DBUK24)

--- a/Ball_Roll_Servo/CMakeLists.txt
+++ b/Ball_Roll_Servo/CMakeLists.txt
@@ -30,6 +30,7 @@ set(${PROJECT_NAME}_HDR
 	include/btstack_config.h
 	include/btController.h
 	include/servoController.h
+	include/tiltController.h
 )
 
 set(${PROJECT_NAME}_SRC
@@ -38,6 +39,7 @@ set(${PROJECT_NAME}_SRC
 	src/main.cpp
 	src/btController.cpp
 	src/servoController.cpp
+	src/tiltController.cpp
 )
 
 # Add executable. Default name is the project name, version 0.1
@@ -49,6 +51,13 @@ pico_set_program_version(${PROJECT_NAME} "0.1")
 
 pico_enable_stdio_usb(${PROJECT_NAME} 1)
 pico_enable_stdio_uart(${PROJECT_NAME} 0)
+
+target_compile_definitions(${PROJECT_NAME} PRIVATE
+	PICO_DEFAULT_UART0_TX_PIN=16
+	PICO_DEFAULT_UART0_RX_PIN=17
+	PICO_DEFAULT_UART1_TX_PIN=8
+	PICO_DEFAULT_UART1_RX_PIN=9
+)
 
 # Add the standard library to the build
 target_link_libraries(${PROJECT_NAME}
