--- a/Dome_Actuation/CMakeLists.txt
+++ b/Dome_Actuation/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_CXX_STANDARD 17)
 # (note this can come from environment, CMake cache etc)
 set(PICO_SDK_PATH "/home/matthew/RaspPi_Pico/pico-sdk")
 
-set(PICO_BOARD pico CACHE STRING "Board type")
+set(PICO_BOARD pico_w CACHE STRING "Board type")
 
 # Pull in Raspberry Pi Pico SDK (must be before project)
 include(pico_sdk_import.cmake)
@@ -23,8 +23,6 @@ project(BB-8_Dome_Actuation C CXX ASM)
 # Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
-add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/externals/Pico-Servo-main/servo)
-
 set(${PROJECT_NAME}_HDR
 	include/Common.h
 	include/MPU6050.h
@@ -34,6 +32,11 @@ set(${PROJECT_NAME}_HDR
 	include/Control.h
 	include/Mapping.h
 	include/Easings.h
+	include/btController.h
+	include/lwipopts.h
+	include/btstack_config.h
+	include/LynxMotionServo.h
+	include/LynxMotionPort.h
 )
 
 set(${PROJECT_NAME}_SRC
@@ -45,6 +48,9 @@ set(${PROJECT_NAME}_SRC
 	src/Calibration.cpp
 	src/Control.cpp
 	src/Mapping.cpp
+	src/btController.cpp
+	src/LynxMotionServo.cpp
+	src/LynxMotionPort.cpp
 )
 
 # Add executable. Default name is the project name, version 0.1
@@ -53,22 +59,29 @@ add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_HDR} ${${PROJECT_NAME}_SRC})
 pico_set_program_name(${PROJECT_NAME} "BB-8 Dome Actuation")
 pico_set_program_version(${PROJECT_NAME} "0.1")
 
-pico_enable_stdio_uart(${PROJECT_NAME} 1)
 pico_enable_stdio_usb(${PROJECT_NAME} 1)
+pico_enable_stdio_uart(${PROJECT_NAME} 0)
+
+target_compile_definitions(${PROJECT_NAME} PRIVATE
+	PICO_DEFAULT_UART0_TX_PIN=16
+	PICO_DEFAULT_UART0_RX_PIN=17
+	PICO_DEFAULT_UART1_TX_PIN=8
+	PICO_DEFAULT_UART1_RX_PIN=9
+)
 
 target_link_libraries(${PROJECT_NAME}
 	pico_stdlib
 	hardware_i2c
-	hardware_pwm
-	hardware_clocks
-	pico_servo_object
+	pico_btstack_classic
+	pico_btstack_cyw43
+	pico_cyw43_arch_none
 )
 
 target_include_directories(${PROJECT_NAME}
 	PRIVATE
-	${CMAKE_CURRENT_LIST_DIR}
-	${CMAKE_CURRENT_LIST_DIR}/include
-	${CMAKE_CURRENT_LIST_DIR}/.. # for our common lwipopts or any other standard includes, if required
+		${CMAKE_CURRENT_LIST_DIR}
+		${CMAKE_CURRENT_LIST_DIR}/include
+		${CMAKE_CURRENT_LIST_DIR}/.. # for our common lwipopts or any other standard includes, if required
 )
 
 pico_add_extra_outputs(${PROJECT_NAME})
