LynxMotion read and write WORKING
ToDo: complete required functions

--- a/Dome_Actuation/CMakeLists.txt
+++ b/Dome_Actuation/CMakeLists.txt
@@ -37,6 +37,7 @@ set(${PROJECT_NAME}_HDR
 	include/btstack_config.h
 	include/LynxMotionServo.h
 	include/LynxMotionPort.h
+	include/LynxMotionVars.h
 )
 
 set(${PROJECT_NAME}_SRC
